product_docs/docs/net_connector/8.0.2.1/09_inserting_records_in_a_database.mdx
---
title: "Inserting records in a database"

---

<div id="inserting_records_in_a_database" class="registered_link"></div>

You can use the `ExecuteNonQuery()` method of `EDBCommand` to add records to a database stored on an EDB Postgres Advanced Server host with an `INSERT` command.

In the example that follows, the `INSERT` command is stored in the variable `cmd`. The values prefixed with a colon (`:`) are placeholders for `EDBParameters` that are instantiated, assigned values, and then added to the `INSERT` command's parameter collection in the statements that follow. The `INSERT` command is executed by the `ExecuteNonQuery()` method of the `cmdInsert` object.

The example adds an employee to the `emp` table:

```cpp
<% @ Page Language="C#" Debug="true"%>
<% @Import Namespace="EnterpriseDB.EDBClient" %>
<% @Import Namespace="System.Data" %>
<% @Import Namespace="System.Configuration" %>
<script language="C#" runat="server" >
private void Page_Load(object sender, System.EventArgs e)
{
	var strConnectionString = ConfigurationManager.AppSettings["DB_CONN_STRING"];
	try
	{
		await using var dataSource = EDBDataSource.Create(ConnectionString);
		var conn = await dataSource.OpenConnectionAsync();
		var cmdQuery = "INSERT INTO emp(empno,ename) VALUES(:EmpNo, :EName)";
		using var cmdInsert = new EDBCommand(cmdQuery, conn);
		cmdInsert.Parameters.Add(new EDBParameter(":EmpNo", EDBTypes.EDBDbType.Integer));
		cmdInsert.Parameters[0].Value = 1234;
		cmdInsert.Parameters.Add(new EDBParameter(":EName", EDBTypes.EDBDbType.Text));
		cmdInsert.Parameters[1].Value = "Lola";
		await cmdInsert.ExecuteNonQueryAsync();
		Response.Write("Record inserted successfully");
		await conn.CloseAsync();
	}
	catch(Exception exp)
    {
		Response.Write(exp.ToString());
	}
}
</script>
```

Save the sample code in a file named `insertEmployee.aspx` in a web root directory. 

To invoke the sample code, enter the following in a browser: `http://localhost/insertEmployee.aspx`
